--- a/imooc-homepage-service/homepage-user/src/main/resources/application.yml
+++ b/imooc-homepage-service/homepage-user/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 server:
-  port: 7001
+  port: 7000
   servlet:
-    context-path: /homepage-course
+    context-path: /homepage-user
 
 spring:
+  main:
+    allow-bean-definition-overriding: true
   application:
-    name: eureka-client-homepage-course
+    name: eureka-client-homepage-user
   jpa:
     show-sql: true
     hibernate:
@@ -26,3 +28,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8000/eureka/
+feign:
+  hystrix:
+    enabled: true
