--- a/imooc-homepage-service/homepage-user/src/test/resources/application.yml
+++ b/imooc-homepage-service/homepage-user/src/test/resources/application.yml
@@ -1,11 +1,13 @@
 server:
-  port: 7001
+  port: 7000
   servlet:
-    context-path: /homepage-course
+    context-path: /homepage-user
 
 spring:
+  main:
+    allow-bean-definition-overriding: true
   application:
-    name: eureka-client-homepage-course
+    name: eureka-client-homepage-user
   jpa:
     show-sql: true
     hibernate:
@@ -22,8 +24,7 @@ spring:
       max-active: 4
       min-idle: 2
       initial-size: 2
-
 eureka:
   client:
     service-url:
-      defaultZone: http://loclhost:8000/eureka/
+      defaultZone: http://localhost:8000/eureka/
