--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>homepage-eureka</module>
         <module>homepage-zuul</module>
+        <module>homepage-config</module>
         <module>imooc-homepage-service</module>
     </modules>
 
